--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@mui/icons-material": "^6.1.9"
+    "@mui/icons-material": "^6.1.9",
+    "lightweight-charts": "^4.2.1"
   }
 }
